Replace body className. Create Header.

--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -9,7 +9,7 @@ html(lang="en")
     #barba-wrapper
 
       block header
-        //include ../components/_header
+        include ../components/_header
     
       // what should be changed with every pjax
       .page(class=outClass)
