--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -1,22 +1,22 @@
 // HEADER :: START
+
 header.header
-  .container
-    .header__wrapper
-      a(href="#").header__logo
-        +icon('ico-email')
-      ul.header__menu
-        - var list = ["Homepage", "Shop", "Blog", "Lorem"]
-          each item in list
-            li
-              a.header__menu-link(href="#")=item
-      
-      .header__cta
-        .header__cart
-          +icon('ico-email')
-      
-      .header__hamburger
-        .hamburger.hamburger--squeeze(js-hamburger)
-          .hamburger-box
-            .hamburger-inner
+  .header__wrapper
+
+    .header__hamburger
+      .header__hamburger-box
+        span.header__hamburger-line.header__hamburger-line--0
+        span.header__hamburger-line.header__hamburger-line--1
+        span.header__hamburger-line.header__hamburger-line--2
+        span.header__hamburger-line.header__hamburger-line--3
+
+      p.header__hamburger-text!= "МЕНЮ"
+
+    .header__logotype.icon-logotype
+
+    a(
+      href="javascript:void(0);"
+      class="header__order js-order"
+    )!= "ЗАКАЗАТЬ<br/>ВЫСТУПЛЕНИЕ"
         
 // HEADER :: END
