--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -4,55 +4,70 @@
   top: 0
   right: 0
   left: 0
-  background: #f5f5f5
+  background: $colorBlack
+
   &__wrapper
     display: flex
-    align-items: center
-    height: 70px
-
-  &__logo
-    flex: 0 0 auto
-    font-size: 35px
-    padding-right: 30px
-
-  &__menu
-    flex: 0 1 auto
-    display: flex
-    align-items: center
-    font-size: 18px
-    margin: 0 auto
-    padding: 0
-    li
-      display: inline-block
-      margin-right: 30px
-    a
-      transition: color .25s $ease
-      &:hover
-        color: tomato
-
-  &__cta
-    margin-left: auto
-    padding-left: 30px
+    justify-content: space-between
+    height: 120px
 
   &__hamburger
-    // display: none
-    padding-left: 20px
-
-
-+r($desktop)
-  .header
-    &__cta
-      display: none
-
-+r($tablet)
-  .header
-    &__menu
-      display: none
-    &__hamburger
-      margin-left: auto
+    cursor: pointer
+    padding-left: 60px
+    display: flex
+    align-items: center
+    &:hover
+      .header__hamburger-line
+        background-color: $colorFuelYellow
+        transition: background-color .25s ease-in-out
+      .header__hamburger-text
+        color: $colorFuelYellow
+        transition: color .25s ease-in-out
+    &-box
+      width: 42px
+      margin-right: 60px
+    &-line
       display: block
+      width: 100%
+      height: 4px
+      margin-bottom: 3px
+      background-color: $colorWhite
+      transition: background-color .25s ease-in-out
+      &:last-child
+        margin-bottom: 0
+      &--1,
+      &--2
+        width: 21px
+        margin:
+          left: auto
+          right: auto
+    &-text
+      color: $colorWhite
+      font:
+        size: 24px
+        weight: bold
+      transition: color .25s ease-in-out
 
-+r($mobile)
-  .header
-    &__logo
-      font-size: 30px
+  &__logotype
+    cursor: pointer
+    position: absolute
+    top: (120px - 60) / 2
+    left: 0
+    right: 0
+    margin: auto
+
+  &__order
+    width: 310px
+    padding:
+      right: 55px
+      top: 32px
+    font:
+      size: 24px
+      weight: bold
+    color: $colorFuelYellow
+    text-align: right
+    transition: background-color .25s ease-in-out
+    &:hover
+      background-color: $colorFuelYellow
+      color: $colorBlack
+      transition: background-color .25s ease-in-out
