--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -16,6 +16,7 @@ $colorBlack: #000000
 $colorWhite: #ffffff
 $colorNobel: #9e9e9e
 $colorFuelYellow: #d99938
+$colorNero: #212121
 
 $grayColor: #999
 $borderColor: #e8e8e8
