--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -22,6 +22,9 @@
 @import components/footer
 @import components/social
 @import components/index
+@import components/homepage
+
+@import components/customButton
 
 // test file
 @import components/test
