--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -10,6 +10,8 @@
 
   &.homepage__main-cbtn
     height: 105px
+  &.homepage__program-cbtn
+    margin-left: 0
 
   &__block
     position: absolute
