--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -22,9 +22,12 @@
 @import components/footer
 @import components/social
 @import components/index
+
 @import components/homepage
+@import components/news
 
 @import components/customButton
+@import components/newsBlock
 
 // test file
 @import components/test
