--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -8,7 +8,8 @@
     left: auto
     right: auto
 
-  &.homepage__main-cbtn
+  &.homepage__main-cbtn,
+  &.news__main-cbtn
     height: 105px
   &.homepage__program-cbtn
     margin-left: 0
@@ -47,6 +48,7 @@
       left: 15px
       right: 15px
 
-    .homepage__main-cbtn &
+    .homepage__main-cbtn &,
+    .news__main-cbtn &
       font-size: 80px
       padding-top: 11px
