--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -9,6 +9,14 @@ mixin icon(name, modClass)
     use(xlink:href= svgSprite + '#' + name)
 
 
+mixin newsBlock(idx, className)
+  .news__wrap
+    -for(var i = 0; i < idx; i++)
+      div.news__wrap-elem(class="news__wrap-elem--" + i)
+        .news__wrap-hidden
+          p!= "ОТКРЫТИЕ<br/>ЮНИКЛО"
+
+
 mixin customBtn(className, text)
   a(href="javascript:void(0);").cbutton(class= className)
     .cbutton__block
