--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -98,54 +98,54 @@
       margin-bottom: 56px
 
     &-wrap
-      display: flex
-      align-items: center
-      justify-content: space-between
-      margin-bottom: 60px
+      //display: flex
+      //align-items: center
+      //justify-content: space-between
+      //margin-bottom: 60px
 
-    &-block
-      cursor: pointer
-      position: relative
-      width: 480px
-      height: 480px
-      box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
-      &:hover
-        .homepage__news-hidden
-          opacity: 1
-          visibility: visible
-          transition: opacity .3s ease-in-out, visibility .3s ease-in-out
+    //&-block
+    //  cursor: pointer
+    //  position: relative
+    //  width: 480px
+    //  height: 480px
+    //  box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
+    //  &:hover
+    //    .homepage__news-hidden
+    //      opacity: 1
+    //      visibility: visible
+    //      transition: opacity .3s ease-in-out, visibility .3s ease-in-out
+    //
+    //  &--0
+    //    background-image: url("../img/ImagePreview-0.jpg")
+    //    background-repeat: no-repeat
+    //    background-size: contain
+    //  &--1
+    //    background-image: url("../img/ImagePreview-1.jpg")
+    //    background-repeat: no-repeat
+    //    background-size: contain
+    //  &--2
+    //    background-image: url("../img/ImagePreview-2.jpg")
+    //    background-repeat: no-repeat
+    //    background-size: contain
 
-      &--0
-        background-image: url("../img/ImagePreview-0.jpg")
-        background-repeat: no-repeat
-        background-size: contain
-      &--1
-        background-image: url("../img/ImagePreview-1.jpg")
-        background-repeat: no-repeat
-        background-size: contain
-      &--2
-        background-image: url("../img/ImagePreview-2.jpg")
-        background-repeat: no-repeat
-        background-size: contain
-
-    &-hidden
-      opacity: 0
-      visibility: hidden
-      position: absolute
-      display: flex
-      justify-content: center
-      align-items: center
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
-      background-color: rgba(0,0,0,0.75)
-      transition: opacity .3s ease-in-out, visibility .3s ease-in-out
-
-      p
-        font:
-          weight: bold
-          size: 40px
-        text-align: center
-        color: $colorFuelYellow
-        text-shadow: 0 0 48px rgba(0, 0, 0, 0.4)
+    //&-hidden
+    //  opacity: 0
+    //  visibility: hidden
+    //  position: absolute
+    //  display: flex
+    //  justify-content: center
+    //  align-items: center
+    //  top: 0
+    //  left: 0
+    //  width: 100%
+    //  height: 100%
+    //  background-color: rgba(0,0,0,0.75)
+    //  transition: opacity .3s ease-in-out, visibility .3s ease-in-out
+    //
+    //  p
+    //    font:
+    //      weight: bold
+    //      size: 40px
+    //    text-align: center
+    //    color: $colorFuelYellow
+    //    text-shadow: 0 0 48px rgba(0, 0, 0, 0.4)
