--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -9,9 +9,11 @@
     right: auto
 
   &.homepage__main-cbtn,
-  &.news__main-cbtn
+  &.news__main-cbtn,
+  &.school__main-cbtn
     height: 105px
-  &.homepage__program-cbtn
+  &.homepage__program-cbtn,
+  &.school__main-cbtn
     margin-left: 0
 
   &__block
@@ -49,6 +51,7 @@
       right: 15px
 
     .homepage__main-cbtn &,
-    .news__main-cbtn &
+    .news__main-cbtn &,
+    .school__main-cbtn &
       font-size: 80px
       padding-top: 11px
