--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -25,6 +25,7 @@
 
 @import components/homepage
 @import components/news
+@import components/school
 
 @import components/customButton
 @import components/newsBlock
