--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -17,8 +17,11 @@ block content
 
     // block programs
     .homepage__program
-      img(src="./img/img-bg.png" class="homepage__program-bg")
+
+      img(src="./img/ImageBgLight_main.png" class="homepage__program-bg")
+
       .container
+
         p.homepage__program-title!= "ТАКАЯ ДАЛЕКАЯ И ЗАГАДОЧНАЯ ЯПОНИЯ"
         p.homepage__program-subTitle!= "ОКАЖЕТСЯ СОВСЕМ РЯДОМ..."
 
@@ -28,7 +31,7 @@ block content
 
           +customBtn('homepage__program-cbtn', "ПРОГРАММЫ")
 
-        img(src="./img/img-homepage__program.png" class="homepage__program-woman")
+        img(src="./img/ImageWoman_main.png" class="homepage__program-woman")
 
         .homepage__program-video
 
