--- a/src/pug/school.pug
+++ b/src/pug/school.pug
@@ -7,11 +7,11 @@ block content
 
   .school__main
 
-    img(src="./img/img-bg-0.png" class="school__main-bg")
+    img(src="./img/ImageBg_school.png" class="school__main-bg")
 
     .container
 
-      img(src="./img/img-school__man.png" class="school__main-man")
+      img(src="./img/ImageMan_school.png" class="school__main-man")
 
       .school__wrap
         .school__row
