--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -18,7 +18,7 @@ mixin newsBlock(idx, className)
 
 
 mixin customBtn(className, text)
-  a(href="javascript:void(0);").cbutton(class= className)
+  a.cbutton(href="javascript:void(0);" class= className)
     .cbutton__block
       .cbutton__block-bg.cbutton__block-bg--0
       .cbutton__block-bg.cbutton__block-bg--1
