--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -12,7 +12,7 @@
       left: 0
       width: 100%
       height: 100%
-      background-image: url("../img/ImageMain-0.jpg")
+      background-image: url("../img/ImageBg_main.jpg")
       background-repeat: no-repeat
       background-size: cover
       background-position: center
