--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -18,20 +18,20 @@
           transition: opacity .3s ease-in-out, visibility .3s ease-in-out
 
       &--0
-        background-image: url("../img/ImagePreview-0.jpg")
+        background-image: url("../img/ImagePreview-0_news.jpg")
         background-repeat: no-repeat
         background-size: cover
       &--1
-        background-image: url("../img/ImagePreview-1.jpg")
+        background-image: url("../img/ImagePreview-1_news.jpg")
         background-repeat: no-repeat
         background-size: cover
       &--2
-        background-image: url("../img/ImagePreview-2.jpg")
+        background-image: url("../img/ImagePreview-2_news.jpg")
         background-repeat: no-repeat
         background-size: cover
       &--full
         width: 1020px
-        background-image: url("../img/ImagePreview-full.jpg")
+        background-image: url("../img/ImagePreview-full_news.jpg")
         background-repeat: no-repeat
         background-size: cover
 
