--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -26,6 +26,7 @@
 @import components/homepage
 @import components/news
 @import components/school
+@import components/about
 
 @import components/customButton
 @import components/newsBlock
