--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -10,11 +10,16 @@
 
   &.homepage__main-cbtn,
   &.news__main-cbtn,
-  &.school__main-cbtn
+  &.school__main-cbtn,
+  &.about__main-cbtn,
+  &.about__member-cbtn
     height: 105px
   &.homepage__program-cbtn,
-  &.school__main-cbtn
+  &.school__main-cbtn,
+  &.about__main-cbtn
     margin-left: 0
+  &.about__member-cbtn
+    margin-right: 0
 
   &__block
     position: absolute
@@ -52,6 +57,8 @@
 
     .homepage__main-cbtn &,
     .news__main-cbtn &,
-    .school__main-cbtn &
+    .school__main-cbtn &,
+    .about__main-cbtn &,
+    .about__member-cbtn &
       font-size: 80px
       padding-top: 11px
