--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -12,11 +12,13 @@
   &.news__main-cbtn,
   &.school__main-cbtn,
   &.about__main-cbtn,
-  &.about__member-cbtn
+  &.about__member-cbtn,
+  &.contacts__main-cbtn
     height: 105px
   &.homepage__program-cbtn,
   &.school__main-cbtn,
-  &.about__main-cbtn
+  &.about__main-cbtn,
+  &.contacts__main-cbtn
     margin-left: 0
   &.about__member-cbtn
     margin-right: 0
@@ -59,6 +61,7 @@
     .news__main-cbtn &,
     .school__main-cbtn &,
     .about__main-cbtn &,
-    .about__member-cbtn &
+    .about__member-cbtn &,
+    .contacts__main-cbtn &
       font-size: 80px
       padding-top: 11px
