--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -27,6 +27,7 @@
 @import components/news
 @import components/school
 @import components/about
+@import components/contacts
 
 @import components/customButton
 @import components/newsBlock
