Create programs page.

--- a/src/pug/programs.pug
+++ b/src/pug/programs.pug
@@ -5,6 +5,53 @@ bodyClass: programs
 extends shared/_layout
 block content
 
+  -
+    var programsTextArr = [
+      "Выступление японских барабанщиц — прекрасное начало любого мероприятия в японском стиле. Попурри из нескольких традиционных композиций задаст тон празднику, наполнит зал энергией и привнесёт торжественный колорит. Если вы задумали добавить торжественности моменту награждения сотрудников — музыкальные отбивки, исполненные на Японских барабанах, станут яркой кульминацией праздника.",
+      "Радость ханами - пришла весна, расцвела нежным розовым цветом сакура. Между деревьев печально бродит юная девушка.<br/>В поиске духа её возлюбленный избрал опасный путь самурая и покинул ее. Одинокая гейша проводит время в саду и любуется пышно цветущей сакурой. Несколько мгновений любования цветами разгоняют тоску и наполняют ее сердце нежностью и любовью. Появляется надежда: пройдет время, в небо полетят лепестки, и он вернется.",
+      "Из леса появляются таинственные девушки:<br/>они играют на барабанах, танцуют и кружатся, привлекая внимание одиноких путников. Кто эти юные незнакомки? Может, это кицунэ – лисы-оборотни, способные превращаться в обольстительных красавиц?<br/>То тут, то там начинают мелькать лисьи хвосты, маленькие ушки и пленительные улыбки...<br/>Теперь все ясно...",
+      "История, восходящая к эпохе Эдо… В городе Мориока наступил долгожданный фестиваль, посвящённый победе добрых духов над ужасным демоном, долгое время мучившим местных жители. Люди, воодушевленные победой, весело танцуют, выкрикивая «санса санса», и повторяют «Sakkora Choiwa Yasse», что является призывом невероятной удачи. Ритмы барабанов разносятся по всей округе, и каждый мечтает стать частью фестиваля.",
+      "Яркие образы Демонов из Японской мифологии создадут колоритную картинку Загадочной и таинственной Японии. Соединение ритуальных танцев и мощных звуков Японских барабанов тайко в одно зрелищное магическое действо. Яркие аутентичные костюмы и традиционные маски Японских Екаев.",
+      "На центральной улице Киото появляется Ойран в сопровождении своего слуги. Стойкий воин оберегает хрупкую девушку на всем ее пути. Богатое кимоно, яркая расписная накидка, дорогие канзаши в волосах и пятнадцатисантиметровые сандалии гэта… От нее невозможно отвести взгляд! Каждый шаг, каждое движение демонстрируют красоту и утонченность японской куртизанки. Окружающие восхищаются и завидуют.<br/>Интересно, куда держит путь эта пара?",
+      "Воздух становится все прохладнее, лето закончилось и наступило время кленовых листьев каэдэ. Деревья меняют цвет, укутывая склоны гор и равнины живописным золотисто-багровым ковром. Лёгкий взмах веера - и зелёный цвет превращается в красный. От дуновения ветра кружатся осенние листья в завораживающем танце. Время любования осенью...",
+      "В далекой Японии есть легенда о дочерях горы Фудзи – прекрасных Глициниях, которые покинули родной дом в поисках возлюбленных, высоких и могучих Сосен. Сестры мечтали, чтобы они оберегали и служили надежной опорой на долгое время. Каждое лето Глицинии пышно распускаются от любви и окутывают склоны Фудзи нежных цветом. Тоскуя по возлюбленным, капли слез застывают в воздухе прекрасными цветами. Они надеются, что скоро встретят своих избраннико...",
+      "Однажды в Осаке появилась таинственная девушка. Это навсегда изменило привычный ритм жизни. Она была настолько очаровательна, что никто не в силах был отвести от взгляд. Перед людьми предстала манящая красота, интригующая и необычайно привлекательная. Она искусно владела магией обольщения - каждое движение завораживало… Девушкой восхищались, но никто не догадывался, что это лиса Кицунэ в человеческом обличии...",
+    ];
+
+
+  .programs__main
+
+      +customBtn('programs__main-cbtn', "ШОУ-ПРОГРАММЫ")
+
+
+  .programs__wrap
+    .container
+
+      // className, imgName, hashText, title, time, text
+      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ШОУ НА ОТКРЫТИЕ", "15-40 мин.", programsTextArr[0])
+
+      // imgName, hashText, cbtnTex, time
+      +programFullBlock("ImageFullBlock_programs", "#ШОУ-ПРОГРАММА", "ЯПОНСКИЕ СЕЗОНЫ", "90 мин.")
+
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "SAKURA BLOSSOM", "5 мин.", programsTextArr[1])
+      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "KITSUNE DANCE", "8 мин.", programsTextArr[2])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "MORIOKA SANSA ODORI", "6 мин.", programsTextArr[3])
+      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ONI DEMONS", "5 мин.", programsTextArr[4])
+
+      +programFullBlock("ImageFullBlock_programs", "#ШОУ-СПЕКТАКЛЬ", "МОРЕ СИНЕГО ЛЕСА", "90 мин.")
+
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ШЕСТВИЕ ОЙРАН", "5 мин.", programsTextArr[5])
+      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "HA NO AKI", "4 мин.", programsTextArr[6])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "FUJI MUSUME", "3 мин.", programsTextArr[7])
+      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "GEISHa KITSUNE", "3 мин.", programsTextArr[8])
+
+
+      p.programs__suit-title!= "КОСТЮМЫ"
+
+      .programs__suit.js-programSuitSlider
+        -for(var i = 0; i < 9; i++)
+          .programs__suit-item
+            img(src="./img/ImageSuit_program.jpg")
 
 block footer
   include ./components/_footer
