--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -28,6 +28,7 @@
 @import components/school
 @import components/about
 @import components/contacts
+@import components/programs
 
 @import components/customButton
 @import components/newsBlock
