--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -8,17 +8,30 @@
     left: auto
     right: auto
 
+  &--icon
+    position: absolute
+    left: 50%
+    right: 0
+    top: 50%
+    bottom: 0
+    margin-top: -(105px / 2)
+    margin-left: -(82px / 2)
+    height: 105px
+
   &.homepage__main-cbtn,
   &.news__main-cbtn,
   &.school__main-cbtn,
   &.about__main-cbtn,
   &.about__member-cbtn,
-  &.contacts__main-cbtn
+  &.contacts__main-cbtn,
+  &.programs__main-cbtn,
+  &.programs__container-cbtn
     height: 105px
   &.homepage__program-cbtn,
   &.school__main-cbtn,
   &.about__main-cbtn,
-  &.contacts__main-cbtn
+  &.contacts__main-cbtn,
+  &.programs__block-cbtn
     margin-left: 0
   &.about__member-cbtn
     margin-right: 0
@@ -45,6 +58,15 @@
         height: 17%
         box-shadow: 0 0 40px 0 rgba(0,0,0,0.55)
 
+  &__icon
+    position: relative
+    z-index: 1
+    margin:
+      top: 27px
+      left: 15px
+      right: 15px
+
+
   &__text
     position: relative
     z-index: 1
@@ -62,6 +84,8 @@
     .school__main-cbtn &,
     .about__main-cbtn &,
     .about__member-cbtn &,
-    .contacts__main-cbtn &
+    .contacts__main-cbtn &,
+    .programs__main-cbtn &,
+    .programs__container-cbtn &
       font-size: 80px
       padding-top: 11px
