--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -29,6 +29,7 @@
 @import components/about
 @import components/contacts
 @import components/programs
+@import components/season
 
 @import components/customButton
 @import components/newsBlock
