--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -25,13 +25,17 @@
   &.about__member-cbtn,
   &.contacts__main-cbtn,
   &.programs__main-cbtn,
-  &.programs__container-cbtn
+  &.programs__container-cbtn,
+  &.season__main-cbtn,
+  &.season__concept-cbtn,
+  &.season__container-cbtn
     height: 105px
   &.homepage__program-cbtn,
   &.school__main-cbtn,
   &.about__main-cbtn,
   &.contacts__main-cbtn,
-  &.programs__block-cbtn
+  &.programs__block-cbtn,
+  &.season__concept-cbtn
     margin-left: 0
   &.about__member-cbtn
     margin-right: 0
@@ -86,6 +90,9 @@
     .about__member-cbtn &,
     .contacts__main-cbtn &,
     .programs__main-cbtn &,
-    .programs__container-cbtn &
+    .programs__container-cbtn &,
+    .season__main-cbtn &,
+    .season__concept-cbtn &,
+    .season__container-cbtn &
       font-size: 80px
       padding-top: 11px
