Some change main index - progress.

--- a/src/pug/season.pug
+++ b/src/pug/season.pug
@@ -40,6 +40,7 @@ block content
       p.season__container-subtilte!= "<b>6 БЛОКОВ<b/> ПО 15 МИНУТ"
 
       +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
+      // text, arr
       +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
 
       +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
