--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -3,7 +3,7 @@
 header.header
   .header__wrapper
 
-    .header__hamburger
+    .header__hamburger(js-hamburger)
       .header__hamburger-box
         span.header__hamburger-line.header__hamburger-line--0
         span.header__hamburger-line.header__hamburger-line--1
