--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -21,6 +21,7 @@
 @import components/header
 @import components/footer
 @import components/social
+@import components/lang
 @import components/index
 
 @import components/homepage
@@ -30,6 +31,7 @@
 @import components/contacts
 @import components/programs
 @import components/season
+@import components/menu
 
 @import components/customButton
 @import components/newsBlock
