--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -31,6 +31,10 @@ body, html
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+html
+  &.is-activeMenu
+    overflow: hidden
+
 .page
   display: flex
   flex-direction: column
