--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -10,9 +10,16 @@ html(lang="en")
 
       block header
         include ../components/_header
+
+      // main menu
+      include ../components/_menu
+
+      // order
+      #order.order
     
       // what should be changed with every pjax
       .page(class=outClass)
+
         .page__content
           block content
 
