--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -28,17 +28,33 @@
   &.programs__container-cbtn,
   &.season__main-cbtn,
   &.season__concept-cbtn,
-  &.season__container-cbtn
+  &.season__container-cbtn,
+  &.menu__cbtn
     height: 105px
   &.homepage__program-cbtn,
   &.school__main-cbtn,
   &.about__main-cbtn,
   &.contacts__main-cbtn,
   &.programs__block-cbtn,
-  &.season__concept-cbtn
+  &.season__concept-cbtn,
+  &.menu__cbtn
     margin-left: 0
   &.about__member-cbtn
     margin-right: 0
+
+  &--hover
+    &:hover
+      .cbutton__block-bg
+        background-color: $colorFuelYellow
+        transition: background-color 0.3s ease-in-out
+
+        &--0
+          box-shadow: 0 0 40px 0 rgba(0,0,0,0.55)
+          transition: box-shadow 0.3s ease-in-out
+        &--1
+          box-shadow: 0 0 40px 0 rgba(0,0,0,0.55)
+          transition: box-shadow 0.3s ease-in-out
+
 
   &__block
     position: absolute
@@ -52,15 +68,25 @@
       width: 100%
       background-color: $colorFuelYellow
 
+      .cbutton--hover &
+        background-color: transparent
+        transition: background-color 0.3s ease-in-out
+
       &--0
         top: 0
         height: 57%
         box-shadow: 0 0 40px 0 rgba(0,0,0,0.55)
 
+        .cbutton--hover &
+          box-shadow: none
+
       &--1
         bottom: 0
         height: 17%
         box-shadow: 0 0 40px 0 rgba(0,0,0,0.55)
+
+        .cbutton--hover &
+          box-shadow: none
 
   &__icon
     position: relative
@@ -93,6 +119,7 @@
     .programs__container-cbtn &,
     .season__main-cbtn &,
     .season__concept-cbtn &,
-    .season__container-cbtn &
+    .season__container-cbtn &,
+    .menu__cbtn &
       font-size: 80px
       padding-top: 11px
