--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -11,7 +11,7 @@
     img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
 
     .menu__row
-      a(href="javascript:void(0);" class="menu__back" js-back)!= "< НАЗАД"
+      a(href="javascript:void(0);" class="menu__back" js-backMenu)!= "< НАЗАД"
 
       +customBtn("cbutton--hover menu__cbtn", "О ГРУППЕ")
       +customBtn("cbutton--hover menu__cbtn", "ПРОГРАММЫ")
