--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -18,7 +18,7 @@ block content
               a(href="tel:89629996662").contacts__phone-number!= '8 (962) 999-666-2'
 
             .contacts__email-wrap
-              p.contacts__email-title!= "ПОЗВОНИТЬ"
+              p.contacts__email-title!= "НАПИСАТЬ"
               a(href="mailto:info@taiko.moscow").contacts__email-number!= 'INFO@TAIKO.MOSCOW'
 
             .footer__present
