--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -15,7 +15,7 @@ html(lang="en")
       include ../components/_menu
 
       // order
-      #order.order
+      include ../components/_order
     
       // what should be changed with every pjax
       .page(class=outClass)
