--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -19,10 +19,14 @@
 @import elements/wow
 
 @import components/header
+@import components/customButton
+@import components/newsBlock
 @import components/footer
 @import components/social
 @import components/lang
-@import components/index
+@import components/menu
+@import components/order
+//@import components/index
 
 @import components/homepage
 @import components/news
@@ -31,10 +35,7 @@
 @import components/contacts
 @import components/programs
 @import components/season
-@import components/menu
 
-@import components/customButton
-@import components/newsBlock
 
 // test file
 @import components/test
