--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -32,7 +32,8 @@ body, html
   -moz-osx-font-smoothing: grayscale
 
 html
-  &.is-activeMenu
+  &.is-activeMenu,
+  &.is-activeOrder
     overflow: hidden
 
 .page
