Add season page content.

--- a/src/pug/season.pug
+++ b/src/pug/season.pug
@@ -6,15 +6,86 @@ extends shared/_layout
 block content
 
   -
-    var seaseonArrText = [
-      "Это время бесконечно моросящего дождя, когда непрерывным потоком капает с неба вода, а зонтик становится главным героем событий. Это время затопленных равнин и живительной влаги, когда отцветает слива и наливаются соком плоды, а первые ростки риса и бамбука только начинают появляться. Это время цветения гортензий, когда в их голубизне утопают храмы и сады, улицы и города.",
+    var objData = [
+      {
+        "imageName" : "ImageSeason0_season",
+        "count" : "#БЛОК ПЕРВЫЙ",
+        "title" : "ХАРУ",
+        "hoverText" : "ЦВЕТОК... И ЕЩЕ ЦВЕТО...<br/>ТАК РАСПУСКАЕТСЯ ВИШНЯ<br/>ТАК ПРИБЫВАЕТ ТЕПЛО",
+        "hoverName" : "РАНСЕЦУ",
+        "description" : "Это время, когда природа пробуждается ото сна и почки только начинают набухать, а свежий ветер парит над океаном. Когда уходят холода и появляется первая радуга, а перелетные птицы возвращаются домой. Когда на улицах и в садах розовым облаком поднимается цветущая сакура, оставляя на земле живой ковер из лепестков, падающих с деревьев. Это сезон Ханами — традиции любования цветами и особое состояние души.",
+        "numbers" : [
+          "YATAI BAYASHI",
+          "SAKURA BLOSSOM",
+          "KYOME"
+        ]
+      },
+      {
+        "imageName" : "ImageSeason1_season",
+        "count" : "#БЛОК ВТОРОЙ",
+        "title" : "ЦУЮ",
+        "hoverText" : "ДОЖДЬ НАБЕГАЕТ ЗА ДОЖДЁМ,<br/>И СЕРДЦЕ БОЛЬШЕ НЕ ТРЕВОЖАТ<br/>РОСТКИ НА РИСОВЫХ ПОЛЯХ.",
+        "hoverName" : "БАСЁ",
+        "description" : "Это время бесконечно моросящего дождя, когда непрерывным потоком капает с неба вода, а зонтик становится главным героем событий. Это время затопленных равнин и живительной влаги, когда отцветает слива и наливаются соком плоды, а первые ростки риса и бамбука только начинают появляться. Это время цветения гортензий, когда в их голубизне утопают храмы и сады, улицы и города.",
+        "numbers" : [
+          "SEN NO KAIKYO",
+          "SHI NO TUKI AME",
+          "YAMAGAWA"
+        ]
+      },
+      {
+        "imageName" : "ImageSeason2_season",
+        "count" : "#БЛОК ТРЕТИЙ",
+        "title" : "НАТСУ",
+        "hoverText" : "ЕДВА-ЕДВА Я ДОБРЕЛ,<br/>ИЗМУЧЕННЫЙ, ДО НОЧЛЕГА...<br/>И ВДРУГ-ГЛИЦИНИЙ ЦВЕТЫ!",
+        "hoverName" : "БАСЁ",
+        "description" : "Это время буйного цветения, когда склоны покрыты мягким ковром из лаванды, гортензии, ирисов и других ярких цветов. Когда гора Фудзи притягивает к восхождению, а подножие окутывается разноцветными гроздья прекрасных цветов глицинии. Это время жарких ветров и ярких ночей, когда леса освещаются мерцанием светлячков.",
+        "numbers" : [
+          "SHIMA UCHI",
+          "FUJI MUSUME",
+          "YODAN UCHI"
+        ]
+      },
+      {
+        "imageName" : "ImageSeason3_season",
+        "count" : "#БЛОК ЧЕТВЕРТЫЙ",
+        "title" : "АКИ",
+        "hoverText" : "ВИДЕЛИ ВСЁ НА СВЕТЕ<br/>МОИ ГЛАЗА - И ВЕРНУЛИСЬ<br/>К ВАМ, БЕЛЫЕ ХРИЗАНТЕМЫ.",
+        "hoverName" : "ИССЁ",
+        "description" : "Это время полной луны, когда невозможно оторвать от нее взгляда, а свет окутывает леса синим морем оттенков. Когда опускаются густые туманы, а белая роса покрывает густую зеленую траву. Это грусть последнего цветения, когда распускаются хризантемы, любование красотой которых продолжается бесконечно.",
+        "numbers" : [
+          "YATAI BAYASHI",
+          "MORIOKA SANSA ODORI",
+          "ISAMI GOMA"
+        ]
+      },
+      {
+        "imageName" : "ImageSeason4_season",
+        "count" : "#БЛОК ПЯТЫЙ",
+        "title" : "МОМИДЗИ",
+        "hoverText" : "О КЛЕНОВЫЕ ЛИСТЬЯ!<br/>КРЫЛЬЯ ВЫ ОБЖИГАЕТЕ<br/>ПРОЛЕТАЮЩИМ ПТИЦАМ",
+        "hoverName" : "СИКО",
+        "description" : "Это время спасения от изнуряющей жары, когда воздух становится все прохладнее, а листья деревьев желтеют, укутывая равнины и склоны гор живописным золотистым ковром. Когда тысячи кленов словно полыхают из-за красной листвы. Это сезон Койо — традиции любования осенними красками.",
+        "numbers" : [
+          "HAYAT",
+          "HA NO AKI",
+          "KAGARIBI"
+        ]
+      },
+      {
+        "imageName" : "ImageSeason5_season",
+        "count" : "#БЛОК ШЕСТОЙ",
+        "title" : "ФУЮ",
+        "hoverText" : "И ПОЛЯ И ГОРЫ -<br/>СНЕГ ТИХОНЬКО ВСЕ УКРАЛ...<br/>СРАЗУ СТАЛО ПУСТО.",
+        "hoverName" : "ДЗЁСО",
+        "description" : "Это время срывающего листья северного ветра, когда холод сковывает деревья и заставляет замереть озера, а последние цветы отцветают. Это время первого снега, когда снежные хлопья тихо ложатся на ветки бамбука и сосен. Когда исчезают радуги, а небо становится прозрачным, как зеркало над голубыми облаками. Это сезон Юкими — традиции любования снегом и холодными красками мороза.",
+        "numbers" : [
+          "ODORI UCHI",
+          "GEISHA KITSUNE",
+          "MILLENNIUM SONG"
+        ]
+      }
     ];
-    var seaseonArrTextElemBlock = [
-      "YATAI BAYASHI",
-      "YAMAGAWA",
-      "SEN NO KAIKYO"
-    ];
-
 
 
   .season__main
@@ -31,32 +102,35 @@ block content
       +customBtn('season__concept-cbtn', "КОНЦЕПЦИЯ")
 
       p.season__concept-title!= "В японской природе за год"
-      p.season__concept-subtitle!= "происходит тысяча изменений<br/>и десять тысяч перемен..."
-      p.season__concept-text!= "Загадка японских сезонов кроется не в яркой смене времён года, а в том, как японцы смотрят на каждое природное явление.<br/><br/>Где ещё любуются, как цветёт сакура, льёт дождь, краснеют листья клёна и падает первый снег?<br/><br/>Чтобы почувствовать загадочную Японию, попробуйте посмотреть по-новому на необыкновенную красоту Японских Сезонов."
+      span.season__concept-subtitle!= "происходит тысяча изменений<br/>и десять тысяч перемен..."
+
+      .season__concept-text
+        p!= "Загадка японских сезонов кроется не в яркой смене времён года, а в том, как японцы смотрят на каждое природное явление."
+        br
+        br
+        p!= "Где ещё любуются, как цветёт сакура, льёт дождь, краснеют листья клёна и падает первый снег?"
+        br
+        br
+        p!= "Чтобы почувствовать загадочную Японию, попробуйте посмотреть по-новому на необыкновенную красоту Японских Сезонов."
 
   .season__container
     .container
       p.season__container-tilte!= "ШОУ-ПРОГРАММА ВКЛЮЧАЕ В СЕБЯ"
       p.season__container-subtilte!= "<b>6 БЛОКОВ<b/> ПО 15 МИНУТ"
 
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      // text, arr
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
+      -for(var i = 0, len = objData.length; i < len; i++)
+        +programFullBlockHover(
+          objData[i]["imageName"],
+          objData[i]["count"],
+          objData[i]["title"],
+          objData[i]["hoverText"],
+          objData[i]["hoverName"]
+        )
+        +seasconBlock(
+          objData[i]["description"],
+          objData[i]["numbers"]
+        )
 
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
-
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
-
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
-
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
-
-      +programFullBlock("ImageFullBlock_programs", "#БЛОК ПЕРВЫЙ", "ХАРУ", "")
-      +seasconBlock(seaseonArrText[0], seaseonArrTextElemBlock)
 
       +customBtn('season__container-cbtn', "СТОИМОСТЬ")
 
