--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -25,7 +25,7 @@
   &.about__member-cbtn,
   &.contacts__main-cbtn,
   &.programs__main-cbtn,
-  &.programs__container-cbtn,
+  &.season__box-cbtn,
   &.season__main-cbtn,
   &.season__concept-cbtn,
   &.season__container-cbtn,
@@ -116,7 +116,7 @@
     .about__member-cbtn &,
     .contacts__main-cbtn &,
     .programs__main-cbtn &,
-    .programs__container-cbtn &,
+    .season__box-cbtn &,
     .season__main-cbtn &,
     .season__concept-cbtn &,
     .season__container-cbtn &,
