--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -73,6 +73,10 @@
       display: inline-block
       vertical-align: middle
 
+    &-hover
+      opacity: 0
+      visibility: hidden
+
   &__block
     display: flex
     margin-bottom: 113px
