--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -33,20 +33,22 @@
       height: 100%
       padding-top: 120px
 
-    &-cbtn
-      margin-bottom: 64px
+      > p,
+      > span
+        font-size: 60px
 
-    &-title,
-    &-subtitle
-      font-size: 60px
-
-    &-subtitle
-      font-weight: bold
-      margin-bottom: 189px
+      > span
+        display: block
+        font-weight: bold
+        margin-bottom: 189px
 
     &-text
-      font-size: 24px
-      margin-left: 50%
+      p
+        font-size: 24px
+        margin-left: 50%
+
+    &-cbtn
+      margin-bottom: 64px
 
     &-image
       position: absolute
@@ -57,6 +59,80 @@
       &--right
         top: 0
         right: 0
+
+  &__box
+    cursor: pointer
+    position: relative
+    height: 600px
+    margin-bottom: 113px
+    background-color: $colorBlack
+    box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.3)
+
+    &:hover
+      .season__box-img
+        &:before
+          background-color: rgba($colorBlack, 0.75)
+      .season__box-info
+        opacity: 0
+        visibility: hidden
+        height: 0
+      .season__box-hover
+        opacity: 1
+        visibility: visible
+        height: 100%
+
+    &-img
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      &:before
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-color: rgba($colorBlack, 0.5)
+
+    &-info
+      z-index: 1
+      position: relative
+      height: 100%
+      display: flex
+      flex-direction: column
+      justify-content: center
+
+      p
+        margin-bottom: 10px
+        font:
+          size: 24px
+          weight: bold
+        text-align: center
+
+    &-hover
+      opacity: 0
+      visibility: hidden
+      z-index: 1
+      position: relative
+      display: flex
+      flex-direction: column
+      justify-content: center
+      height: 0
+      text-align: center
+
+      p,
+      span
+        text-shadow: 0 0 36px rgba(0, 0, 0, 0.85)
+
+      p
+        font-size: 40px
+        margin-bottom: 10px
+      span
+        font-size: 24px
+        color: $colorFuelYellow
+
 
   &__container
     padding:
@@ -117,8 +193,6 @@
 
     > p
       font-size: 24px
-
-    &-container
 
     &-item
       display: flex
